update image paths for google Colab

--- a/15-Recursion.ipynb
+++ b/15-Recursion.ipynb
@@ -34830,7 +34830,7 @@
    "id": "38a6f92d",
    "metadata": {},
    "source": [
-    "[![Relevant XKCD Cartoon](images/relevantXKCD.png)](https://thomaspark.co/2017/01/relevant-xkcd/)\n",
+    "[![Relevant XKCD Cartoon](images/relevantXKCD.png?raw=true)](https://thomaspark.co/2017/01/relevant-xkcd/)\n",
     "<br>\n",
     "<small>Credit: https://thomaspark.co/2017/01/relevant-xkcd/</small>"
    ]
