--- a/other_notebooks/Reference-Sets.ipynb
+++ b/other_notebooks/Reference-Sets.ipynb
@@ -202,7 +202,7 @@
     "Set Operations can be performed either by method calls or opeartors.\n",
     "\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "![image.png](attachment:image.png?raw=true)\n",
     "\n",
     "<small>Source:https://www.datacamp.com/community/tutorials/sets-in-python</small>"
    ]
