fix image paths

--- a/other_notebooks/Reference-DateTime.ipynb
+++ b/other_notebooks/Reference-DateTime.ipynb
@@ -623,7 +623,7 @@
    "source": [
     "Pendulum also supports an alternative format to convert date time values to objects. Many other languages and libraries use this formatting approach.\n",
     "\n",
-    "[Further details and available tokens](https://github.com/sdispater/pendulum/blob/master/docs/docs/string_formatting.md)"
+    "[Further details and available tokens](https://raw.githubusercontent.com/sdispater/pendulum/blob/master/docs/docs/string_formatting.md)"
    ]
   },
   {
@@ -697,7 +697,7 @@
     "8. The developers used docstrings for the class itself and then for the different methods within the class.\n",
     "9. The `__sub__` method checks the type of arguments passed and alters its behavior based on those types.\n",
     "\n",
-    "Source: https://github.com/python/cpython/blob/main/Lib/datetime.py\n"
+    "Source: https://raw.githubusercontent.com/python/cpython/blob/main/Lib/datetime.py\n"
    ]
   },
   {
